# flat-head

./: .env.example  .gitignore  Cargo.toml  Readme.md  rust-toolchain.toml
dev/: docker-compose.yml  minio.env
src/: era_validator.rs  era_verifier.rs  lib..rs  lib.rs  main.rs  s3.rs  store.rs  stream.rs  utils.rs
tests/compressed/: 0000000100.dbin.zst  0000000200.dbin.zst  0000000300.dbin.zst  0000000400.dbin.zst  0000000500.dbin.zst  0000000600.dbin.zst  0000000700.dbin.zst  0000000800.dbin.zst  0000000900.dbin.zst  0000001000.dbin.zst  0000001100.dbin.zst  0000001200.dbin.zst  0000001300.dbin.zst  0000001400.dbin.zst  0000001500.dbin.zst  0000001600.dbin.zst  0000001700.dbin.zst  0000001800.dbin.zst  0000001900.dbin.zst  0000002000.dbin.zst  0000002100.dbin.zst  0000002200.dbin.zst  0000002300.dbin.zst  0000002400.dbin.zst  0000002500.dbin.zst  0000002600.dbin.zst  0000002700.dbin.zst  0000002800.dbin.zst  0000002900.dbin.zst  0000003000.dbin.zst  0000003100.dbin.zst  0000003200.dbin.zst  0000003300.dbin.zst  0000003400.dbin.zst  0000003500.dbin.zst  0000003600.dbin.zst  0000003700.dbin.zst  0000003800.dbin.zst  0000003900.dbin.zst  0000004000.dbin.zst  (+169 more)
