[package]
name = "flat_head"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bincode = "1.3.3"
bytes = "1.5"
clap = { version = "4.3.21", features = ["derive"] }
decoder = { git = "https://github.com/semiotic-ai/flat-files-decoder.git", branch = "main" }
dotenv = "0.15.0"
env_logger = "0.11.2"
futures = "0.3"
header_accumulator = { git = "https://git@github.com/semiotic-ai/header_accumulator.git", tag = "v0.2.0-alpha" }
log = "0.4.20"
object_store = { version = "0.9.0", features = ["gcp", "http", "aws"] }
sf-protos = { git = "https://github.com/semiotic-ai/sf-protos.git", version = "0.1.0" }
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }
tree_hash = "0.5.2"
trin-validation = { git = "https://github.com/ethereum/trin.git", version = "0.1.0" }
url = "2.5"
zstd = "0.13.0"
